objects/Corporate__c/Corporate__c.object-meta.xml
<CustomObject>
    <label>Corporate xx</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>