objects/Corporate__c/fields/Corporate_No__c.field-meta.xml
<CustomField>
    <fullName>Corporate_No__c</fullName>
    <externalId>true</externalId>
    <label>Corporate No.</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>