objects/Corporate__c/fields/Two_Year_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Two_Year_Revenue__c</fullName>
    <label>Two Year Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>