objects/Corporate__c/fields/X60_Day_Balance__c.field-meta.xml
<CustomField>
    <fullName>X60_Day_Balance__c</fullName>
    <label>60 Day Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>