objects/Corporate__c/fields/YTD_Revenue__c.field-meta.xml
<CustomField>
    <fullName>YTD_Revenue__c</fullName>
    <label>YTD Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>